Proper json hint for VirtualMachinePreset Selector
